--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "start": "node ./dist/index.js"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
     "@types/node": "^17.0.14",
+    "colors": "^1.4.0",
+    "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
+    "keyv": "^4.1.0",
+    "ms": "^2.1.3",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/keyv": "^3.1.3",
+    "@types/ms": "^0.7.31"
   }
 }
